# rag-agentic-ai

./: .env.example  .gitignore  API_KEYS_SETUP.md  OLLAMA_SETUP.md  README.md  Readme.md  config.py  docker-compose.embed.yml  docker-compose.llm.yml  docker-compose.separate.yml  docker-compose.yml  ollama_utils.py  pyproject.toml  requirements.txt
Module1/lab/: In-Context Learning and Prompt Templates for Advanced AI.ipynb
Module2/quiz/: practice-quiz1.txt  practice-quiz2.txt
course1/Module1/quiz/: practice-quiz1.txt  practice-quiz2.txt
course1/Module1/scripts/: test_api.py  test_config.py  test_open_router_gemini.py  test_open_router_gpt.py  test_open_router_llama.py
course1/Module2/Scripts/: memory_script.py
course1/Module2/lab/: Build Smarter AI Apps Empower LLMs with LangChain-question.ipynb
course1/Module2/notes/: Module 2 Lab 1.md  Module_2_Lab_1.md
course1/Module2/quiz/: practice-quiz1.txt  practice-quiz2.txt
course1/Module3/Lab/: practice_online.txt
course1/Module3/Scripts/: flask_application.py
course1/Module3/quiz/: practice-quiz1.txt  practice-quiz2.txt
