[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agentic-ai"
version = "0.1.0"
description = "RAG Agentic AI Project"
readme = "Readme.md"
requires-python = ">=3.8"
dependencies = [
    "ibm-watsonx-ai==1.0.8",
    "ibm-watson-machine-learning==1.0.367",
    "langchain-ibm==0.1.7",
    "langchain-community==0.2.10",
    "langchain==0.2.11",
    "langchain-experimental==0.0.62",
    "langchainhub==0.1.18",
    "pypdf==4.2.0",
    "chromadb==0.4.24",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tensorflow",
    "Flask==3.1.2",
    "python-dotenv==1.0.0",
    "openai",
]

[tool.setuptools]
# Automatically discover all packages (course1, course2, ..., course8, etc.)
packages = { find = { where = ["."], include = ["course*", "course*.*"] } }
py-modules = ["config"]
